Bug fix images no longer overlapping

--- a/css/styles.css
+++ b/css/styles.css
@@ -202,17 +202,21 @@ nav h1 a {
   z-index: 1000;
 }
 .inside #map-container {
+  display: flex;
+  
   background: blue none repeat scroll 0 0;
   height: 87%;
   position: fixed;
   right: 0;
   top: 80px;
   width: 50%;
+  
 }
 .inside #map {
   background-color: #ccc;
   height: 100%;
   width: 100%;
+  position:fixed;
 }
 .inside #footer {
   bottom: 0;
@@ -228,15 +232,17 @@ nav h1 a {
   margin: 15px 0 30px;
   text-transform: uppercase;
   line-height: 1.1;
+  width: 75%;
 }
 #restaurant-img {
   margin: auto;
-	width: 90%;
+	width: 75%;
 
 }
 #restaurant-address {
   font-size: 12pt;
   margin: 10px 0px;
+  width: 75%;
 }
 #restaurant-cuisine {
   background-color: #333;
@@ -248,16 +254,16 @@ nav h1 a {
   padding: 2px 0;
   text-align: center;
   text-transform: uppercase;
-	width: 90%;
+	width: 75%;
 }
 #restaurant-container, #reviews-container {
   border-bottom: 1px solid #d9d9d9;
   border-top: 1px solid #fff;
-  padding: 140px 40px 30px;
+  padding: 30px;
   width: 50%;
 }
 #reviews-container {
-  padding: 30px 40px 80px;
+  padding: 30px;
 }
 #reviews-container h2 {
   color: #f58500;
@@ -265,6 +271,7 @@ nav h1 a {
   font-weight: 300;
   letter-spacing: -1px;
   padding-bottom: 1pt;
+  text-align: center;
 }
 #reviews-list {
   margin: 0;
@@ -279,19 +286,25 @@ nav h1 a {
   overflow: hidden;
   padding: 0 20px 20px;
   position: relative;
-  width: 75%;
+  width: 50%;
 }
 
 #reviews-list li p {
-  margin: 0 0 10px;
+  margin: auto;
 }
 #restaurant-hours td {
   color: #666;
+  display: block;
+  width: 75%;
 }
 
 /* Responsive design */
 
-
+@media screen and (max-width: 350px) {
+  .restaurant-img {
+    height: 150px;
+  }
+}
 
 /*@media screen and (max-width: 750px) {
   .inside body {
